# anton_noise

./: .clang-format  CMakeLists.txt  README.md
include/anton/: noise.hpp
src/: noise.cpp
